fix layout issue on rankings in FF

--- a/app/css/spotmate.css
+++ b/app/css/spotmate.css
@@ -14,7 +14,6 @@ body {
 }
 
 .spotmate-ranking {
-    width: 380px;
     height:120px;
     overflow: hidden;
 }
